# py-eta-modbus

./: .gitignore  LICENSE  Makefile  README.md  config.xml  modbusTcpService.xml  pyproject.toml  readdata.py  setup.cfg  setup.py
etamodbus/: __init__.py  __version__.py  client.py  config.py  register.py  status.py  values.py
examples/: read.py  read_all.py
tests/: config_test.py  conftest.py
