[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "eta-modbus"
version = "1.0.6"
authors = [
  {name = "Christian Schmizz", email = "mail@schmizz.com"},
]
description = "Accessing ETA heating data via modbus/tcp protocol"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["heating", "modbus", "monitoring"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "pyModbusTCP>0.2.0",
  "typing_extensions>4.8"
]

[project.optional-dependencies]
testing = [
  "pytest-cov",
  "pytest-mock",
  "pytest>=3",
]

[project.urls]
Repository = "https://github.com/christianschmizz/py-eta-modbus.git"
Issues = "https://github.com/christianschmizz/py-eta-modbus/issues"
